--- a/package.json
+++ b/package.json
@@ -1,11 +1,4 @@
 {
-  "devDependencies": {
-    "@mermaid-js/mermaid-cli": "^9.2.2",
-    "prisma": "^4.7.1",
-    "prisma-erd-generator": "^1.2.4"
-  },
-  "dependencies": {
-    "@fastify/cors": "^8.2.0",
-    "@prisma/client": "^4.7.1"
-  }
+  "devDependencies": {},
+  "dependencies": {}
 }
